<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_generated_passwords"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="edu.uncc.passwordgenerator.GeneratedPasswordsActivity">

    <TextView
        android:text="@string/thread_passwords"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="17dp"
        android:id="@+id/tvThreadPAsswords" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:layout_below="@+id/tvThreadPAsswords"
        android:layout_alignLeft="@+id/tvThreadPAsswords"
        android:layout_alignStart="@+id/tvThreadPAsswords"
        android:layout_marginTop="23dp"
        android:id="@+id/sbThreadPasswords">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/sbLinearThreadPasswords" />
    </ScrollView>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:layout_below="@+id/tvAsyncPasswords"
        android:layout_alignLeft="@+id/tvAsyncPasswords"
        android:layout_alignStart="@+id/tvAsyncPasswords"
        android:layout_marginTop="18dp"
        android:id="@+id/sbAsyncPasswords">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/sbLinearAsyncPasswords" />
    </ScrollView>

    <Button
        android:text="@string/finish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnFinish"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:text="@string/passwords_generated_async"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvAsyncPasswords"
        android:layout_centerVertical="true"
        android:layout_alignLeft="@+id/sbThreadPasswords"
        android:layout_alignStart="@+id/sbThreadPasswords" />
</RelativeLayout>
